Hack to prevent menu from growing back if mouse doesnt move after collapse click

--- a/app/src/app/layouts/admin-panel/admin-panel.tmpl.scss
+++ b/app/src/app/layouts/admin-panel/admin-panel.tmpl.scss
@@ -25,7 +25,7 @@
     min-width: 48px;
     max-width: 48px;
     transition: all .3s;
-    &:hover {
+    &.hover {
       min-width: 260px;
       max-width: 260px;
     }
